[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/digimon_slot_panel.gd" id="1"]

[node name="DigimonSlotPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 50)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InfoVBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopRow" type="HBoxContainer" parent="HBox/InfoVBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBox/InfoVBox/TopRow" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
text = "(Empty)"

[node name="LevelLabel" type="Label" parent="HBox/InfoVBox/TopRow" unique_name_in_owner=true]
layout_mode = 2
text = ""

[node name="ElementLabel" type="Label" parent="HBox/InfoVBox" unique_name_in_owner=true]
layout_mode = 2
text = ""

[node name="ButtonVBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2

[node name="EditButton" type="Button" parent="HBox/ButtonVBox" unique_name_in_owner=true]
layout_mode = 2
text = "Edit"

[node name="RemoveButton" type="Button" parent="HBox/ButtonVBox" unique_name_in_owner=true]
layout_mode = 2
text = "Remove"
